# FitNote

./: .gitignore  Cargo.toml  README.md  app.db  schema.sql
src/: app.rs  domain.rs  llm.rs  main.rs
src/db/: mod.rs  schema.rs  seed.rs
src/ui/: foods.rs  graph.rs  home.rs  mod.rs  report.rs  settings.rs  training.rs
