[package]
name = "calorie-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe      = "0.29"
egui        = "0.29"
rusqlite    = { version = "0.32", features = ["bundled"] }
chrono      = "0.4"
anyhow      = "1"
ureq        = { version = "2", features = ["json"] }
serde_json  = "1"
dotenvy     = "0.15"   # .env ファイルの読み込み
